[package]
name = "babynotes-mutator"
version = "0.1.0"
authors = ["Sirui <msrlancern@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.1"
fuzzer = { path = "../fuzzer" }
rand = "0.7.3"
serde = { version = "1.0.117", features = ["derive"] }
