[package]
name = "fuzzer"
version = "0.1.0"
authors = ["Sirui <msrlancern@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_pcg = "0.2.1"
serde = { version = "1.0.117", features = ["derive"] }
